# books-translator-ng

./: README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml
.claude/: settings.local.json
flows/test-epub-translator/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
tasks/book-translator/: __init__.py  task.oo.yaml
tasks/epub-translator/: __init__.py  task.oo.yaml
