[project]
name = "books-translator"
version = "1.0.3"
description = ""
authors = [
    {name = "shaun",email = "beingswu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "epub-translator (>=0.1.6,<0.2.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "epub_translator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
